-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8.0 Alpha
-
OpenSUSE 42.1
-
5011b746f5fd9ae93d0a60ec0517eb7d7e0e189c
We need to get QtWayland in the CI and this is one of the issues preventing it. I don't feel like blacklisting this, since the test is crashing.
/home/qt/work/qt/qtbase/tests/auto/corelib/kernel/qsocketnotifier/target_wrapper.sh ./tst_qsocketnotifier asyncMultipleDatagram ********* Start testing of tst_QSocketNotifier ********* Config: Using QtTest library 5.8.0, Qt 5.8.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 4.8.5) PASS : tst_QSocketNotifier::initTestCase() ========= Received signal, dumping stack ============== GNU gdb (GDB; %maintenance_distribution) 7.9.1 Copyright (C) 2015 Free Software Foundation, Inc. License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html> This is free software: you are free to change and redistribute it. There is NO WARRANTY, to the extent permitted by law. Type "show copying" and "show warranty" for details. This GDB was configured as "x86_64-suse-linux". Type "show configuration" for configuration details. For bug reporting instructions, please see: <http://bugs.opensuse.org/>. Find the GDB manual and other documentation resources online at: <http://www.gnu.org/software/gdb/documentation/>. For help, type "help". Type "apropos word" to search for commands related to "word". Attaching to process 12389 Reading symbols from /home/qt/work/qt/qtbase/tests/auto/corelib/kernel/qsocketnotifier/tst_qsocketnotifier...done. Reading symbols from /home/qt/work/install/lib/libQt5Network.so.5...done. Reading symbols from /home/qt/work/install/lib/libQt5Test.so.5...done. Reading symbols from /home/qt/work/install/lib/libQt5Core.so.5...done. Reading symbols from /lib64/libpthread.so.0...(no debugging symbols found)...done. [New LWP 12390] [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib64/libthread_db.so.1". Reading symbols from /usr/lib64/libstdc++.so.6...(no debugging symbols found)...done. Reading symbols from /lib64/libm.so.6...(no debugging symbols found)...done. Reading symbols from /lib64/libgcc_s.so.1...(no debugging symbols found)...done. Reading symbols from /lib64/libc.so.6...(no debugging symbols found)...done. Reading symbols from /lib64/libz.so.1...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libproxy.so.1...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libicui18n.so.52.1...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libicuuc.so.52.1...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libicudata.so.52.1...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libpcre16.so.0...(no debugging symbols found)...done. Reading symbols from /lib64/libdl.so.2...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libgthread-2.0.so.0...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libglib-2.0.so.0...(no debugging symbols found)...done. Reading symbols from /lib64/librt.so.1...(no debugging symbols found)...done. Reading symbols from /lib64/ld-linux-x86-64.so.2...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libmodman.so.1...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libpcre.so.1...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libproxy-0.4.11/modules/config_kde4.so...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libkdecore.so.5...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libQtCore.so.4...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libQtNetwork.so.4...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libQtDBus.so.4...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libbz2.so.1...(no debugging symbols found)...done. Reading symbols from /usr/lib64/liblzma.so.5...(no debugging symbols found)...done. Reading symbols from /lib64/libssl.so.1.0.0...(no debugging symbols found)...done. Reading symbols from /lib64/libcrypto.so.1.0.0...(no debugging symbols found)...done. Reading symbols from /usr/lib64/libQtXml.so.4...(no debugging symbols found)...done. Reading symbols from /lib64/libdbus-1.so.3...(no debugging symbols found)...done. 0x00007f537ea82a49 in waitpid () from /lib64/libc.so.6 Missing separate debuginfos, use: zypper install glibc-debuginfo-2.19-17.4.x86_64 libbz2-1-debuginfo-1.0.6-30.4.x86_64 libdbus-1-3-debuginfo-1.8.16-5.2.x86_64 libgcc_s1-debuginfo-5.2.1+r226025-4.2.x86_64 libglib-2_0-0-debuginfo-2.44.1-2.3.x86_64 libgthread-2_0-0-debuginfo-2.44.1-2.3.x86_64 libicu52_1-debuginfo-52.1-10.3.x86_64 libkdecore4-debuginfo-4.14.16-4.1.x86_64 liblzma5-debuginfo-5.0.5-3.5.x86_64 libmodman1-debuginfo-2.0.1-17.1.x86_64 libopenssl1_0_0-debuginfo-1.0.1i-9.1.x86_64 libpcre1-debuginfo-8.33-3.5.x86_64 libpcre16-0-debuginfo-8.33-3.5.x86_64 libproxy1-config-kde4-debuginfo-0.4.11-13.2.x86_64 libproxy1-debuginfo-0.4.11-13.2.x86_64 libqt4-debuginfo-4.8.6-5.2.x86_64 libstdc++6-debuginfo-5.2.1+r226025-4.2.x86_64 libz1-debuginfo-1.2.8-6.4.x86_64 (gdb) Thread 2 (Thread 0x7f537b5ac700 (LWP 12390)): #0 0x00007f537f619408 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0 No symbol table info available. #1 0x00007f537f8fbad1 in QWaitConditionPrivate::wait_relative (this=0x7707a0, time=300000) at thread/qwaitcondition_unix.cpp:133 ti = {tv_sec = 1246, tv_nsec = 113655189} #2 0x00007f537f8fbafe in QWaitConditionPrivate::wait (this=0x7707a0, time=300000) at thread/qwaitcondition_unix.cpp:141 code = 0 #3 0x00007f537f8fb8f5 in QWaitCondition::wait (this=0x7709d0, mutex=0x7709c8, time=300000) at thread/qwaitcondition_unix.cpp:215 __PRETTY_FUNCTION__ = "bool QWaitCondition::wait(QMutex*, long unsigned int)" returnValue = false #4 0x00007f538006cd7b in QTest::WatchDog::run (this=0x7709b0) at qtestcase.cpp:932 t = 300000 locker = {val = 7801289} __PRETTY_FUNCTION__ = "virtual void QTest::WatchDog::run()" #5 0x00007f537f8fa438 in QThreadPrivate::start (arg=0x7709b0) at thread/qthread_unix.cpp:344 __clframe = { __cancel_routine = 0x7f537f8fa4a2 <QThreadPrivate::finish(void*)>, __cancel_arg = 0x7709b0, __do_it = 1, __cancel_type = 0} thr = 0x7709b0 data = 0x770720 #6 0x00007f537f6150a4 in start_thread () from /lib64/libpthread.so.0 No symbol table info available. #7 0x00007f537eab104d in clone () from /lib64/libc.so.6 No symbol table info available. Thread 1 (Thread 0x7f538086d740 (LWP 12389)): #0 0x00007f537ea82a49 in waitpid () from /lib64/libc.so.6 No symbol table info available. #1 0x00007f537ea0d1bb in do_system () from /lib64/libc.so.6 No symbol table info available. #2 0x00007f5380062f9e in stackTrace () at qtestcase.cpp:164 ok = false disableStackDump = 0 cmd = "gdb --pid 12389 2>/dev/null <<EOF\nset prompt\nset height 0\nthread apply all where full\ndetach\nquit\nEOF\n", '\000' <repeats 34 times>, "X㉀S\177\000\000\020)*\200S\177\000\000\000)*\200S\177\000\000c\374\244\273\000\000\000\000E\236\005\200S\177\000\000\377\377\377\377", '\000' <repeats 12 times>, "Ƚ\204\177S\177\000\000\000剀S"... #3 0x00007f53800678f2 in QTest::FatalSignalHandler::signal (signum=11) at qtestcase.cpp:1354 msecsFunctionTime = 2 msecsTotalTime = 2 __PRETTY_FUNCTION__ = "static void QTest::FatalSignalHandler::signal(int)" #4 <signal handler called> No symbol table info available. #5 0x00007f537a77f00e in ?? () from /usr/lib64/libkdecore.so.5 No symbol table info available. #6 0x00007f538068e92a in call_init.part () from /lib64/ld-linux-x86-64.so.2 No symbol table info available. #7 0x00007f538068ea13 in _dl_init_internal () from /lib64/ld-linux-x86-64.so.2 No symbol table info available. #8 0x00007f5380692b48 in dl_open_worker () from /lib64/ld-linux-x86-64.so.2 No symbol table info available. #9 0x00007f538068e7e4 in _dl_catch_error () from /lib64/ld-linux-x86-64.so.2 No symbol table info available. #10 0x00007f538069233b in _dl_open () from /lib64/ld-linux-x86-64.so.2 No symbol table info available. #11 0x00007f537d7a002b in dlopen_doit () from /lib64/libdl.so.2 No symbol table info available. #12 0x00007f538068e7e4 in _dl_catch_error () from /lib64/ld-linux-x86-64.so.2 No symbol table info available. #13 0x00007f537d7a05dd in _dlerror_run () from /lib64/libdl.so.2 No symbol table info available. #14 0x00007f537d7a00c1 in dlopen@@GLIBC_2.2.5 () from /lib64/libdl.so.2 No symbol table info available. #15 0x00007f537ce81f25 in libmodman::module_manager::load_file(std::string, bool) () from /usr/lib64/libmodman.so.1 No symbol table info available. #16 0x00007f537ce822b3 in libmodman::module_manager::load_dir(std::string, bool) () from /usr/lib64/libmodman.so.1 No symbol table info available. #17 0x00007f537e5a0e06 in ?? () from /usr/lib64/libproxy.so.1 No symbol table info available. #18 0x00007f537e5a19bb in px_proxy_factory_new () from /usr/lib64/libproxy.so.1 No symbol table info available. #19 0x00007f538039800d in QLibProxyWrapper::QLibProxyWrapper ( this=0x7f538067ea10 <(anonymous namespace)::Q_QGS_libProxyWrapper::innerFunction()::holder>) at kernel/qnetworkproxy_libproxy.cpp:55 No locals. #20 0x00007f5380397586 in (anonymous namespace)::Q_QGS_libProxyWrapper::Holder::Holder ( this=0x7f538067ea10 <(anonymous namespace)::Q_QGS_libProxyWrapper::innerFunction()::holder>) at kernel/qnetworkproxy_libproxy.cpp:72 No locals. #21 0x00007f53803975f3 in (anonymous namespace)::Q_QGS_libProxyWrapper::innerFunction () at kernel/qnetworkproxy_libproxy.cpp:72 holder = {<(anonymous namespace)::Q_QGS_libProxyWrapper::HolderBase> = {<No data fields>}, value = {factory = 0x0}} #22 0x00007f5380397fda in QGlobalStatic<QLibProxyWrapper, (* (anonymous namespace)::Q_QGS_libProxyWrapper::innerFunction), (* & (anonymous namespace)::Q_QGS_libProxyWrapper::guard)>::operator()(void) (this=0x7f538067ea08 <libProxyWrapper>) at ../../include/QtCore/../../src/corelib/global/qglobalstatic.h:135 No locals. #23 0x00007f5380397af5 in QNetworkProxyFactory::systemProxyForQuery (query=...) at kernel/qnetworkproxy_libproxy.cpp:125 haveDirectConnection = false proxyList = {<QListSpecialMethods<QNetworkProxy>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = { _q_value = {<std::__atomic_base<int>> = { _M_i = -1}, <No data fields>}}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x7f537fc1caf0 <QListData::shared_null>}, d = 0x7f537fc1caf0 <QListData::shared_null>}} queryUrl = {d = 0x770cb0} requiredCapabilities = {i = 4} rawProxies = {<QListSpecialMethods<QUrl>> = {<No data fields>}, {p = { static shared_null = {ref = {atomic = { _q_value = {<std::__atomic_base<int>> = { _M_i = -1}, <No data fields>}}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x7fffe0e35218}, d = 0x7fffe0e35218}} #24 0x00007f538038e1f7 in QSystemConfigurationProxyFactory::queryProxy ( this=0x771110, query=...) at ../../include/QtNetwork/5.8.0/QtNetwork/private/../../../../../src/network/kernel/qnetworkproxy_p.h:66 proxies = {<QListSpecialMethods<QNetworkProxy>> = {<No data fields>}, { p = {static shared_null = {ref = {atomic = { _q_value = {<std::__atomic_base<int>> = { _M_i = -1}, <No data fields>}}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x7f537fc1caf0 <QListData::shared_null>}, d = 0x7f537fc1caf0 <QListData::shared_null>}} #25 0x00007f538038c21c in QGlobalNetworkProxy::proxyForQuery ( this=0x7f538067e940 <(anonymous namespace)::Q_QGS_globalNetworkProxy::innerFunction()::holder>, query=...) at kernel/qnetworkproxy.cpp:344 locker = {val = 139996613306689} __PRETTY_FUNCTION__ = "QList<QNetworkProxy> QGlobalNetworkProxy::proxyForQuery(const QNetworkProxyQuery&)" result = {<QListSpecialMethods<QNetworkProxy>> = {<No data fields>}, { p = {static shared_null = {ref = {atomic = { _q_value = {<std::__atomic_base<int>> = { _M_i = -1}, <No data fields>}}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x7f537fc1caf0 <QListData::shared_null>}, d = 0x7f537fc1caf0 <QListData::shared_null>}} parsed = {d = {d = 0x7714b0}} hostname = {static null = {<No data fields>}, d = 0x7f537fc18d80 <QArrayData::shared_null>} #26 0x00007f538038daed in QNetworkProxyFactory::proxyForQuery (query=...) at kernel/qnetworkproxy.cpp:1568 No locals. #27 0x00007f53803a7afb in QAbstractSocketPrivate::resolveProxy (this=0x7711e0, hostname=..., port=0) at socket/qabstractsocket.cpp:916 query = {d = {d = 0x770a30}} proxies = {<QListSpecialMethods<QNetworkProxy>> = {<No data fields>}, { p = {static shared_null = {ref = {atomic = { _q_value = {<std::__atomic_base<int>> = { _M_i = -1}, <No data fields>}}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x7f537fc1caf0 <QListData::shared_null>}, d = 0x7f537fc1caf0 <QListData::shared_null>}} #28 0x00007f53803a937d in QAbstractSocketPrivate::bind (this=0x7711e0, address=..., port=0, mode=...) at socket/qabstractsocket.cpp:1522 nullAddress = {d = {d = 0x771470}} protocol = QAbstractSocket::IPv4Protocol q = 0x7711c0 result = false #29 0x00007f53803a929e in QAbstractSocket::bind (this=0x7711c0, address=..., port=0, mode=...) at socket/qabstractsocket.cpp:1512 d = 0x7711e0 #30 0x000000000040adea in tst_QSocketNotifier::asyncMultipleDatagram ( this=0x7fffe0e367c0) at tst_qsocketnotifier.cpp:356 port = 0 spy = {<QObject> = {_vptr.QObject = 0x7f537f858860, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7f537fcdf9c0 <qt_meta_stringdata_QObject>, data = 0x7f537fcdfae0 <qt_meta_data_QObject>, static_metacall = 0x7f537fb73f08 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x7f538089e500}, static staticQtMetaObject = {d = {superdata = 0x0, stringdata = 0x7f537fd2e1e0 <qt_meta_stringdata_Qt>, data = 0x7f537fd39020 <qt_meta_data_Qt>, static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, <QList<QList<QVariant> >> = {<QListSpecialMethods<QList<QVariant> >> = {<No data fields>}, {p = {static shared_null = { ref = {atomic = {_q_value = {<std::__atomic_base<int>> = { _M_i = -1}, <No data fields>}}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, d = 0x7fffe0e358b0}, d = 0x7fffe0e358b0}}, sig = {d = 0x3000000018}, args = { d = 0x7fffe0e35e80}, m_loop = {<QObject> = { _vptr.QObject = 0x7fffe0e35dc0, static staticMetaObject = {d = { superdata = 0x0, stringdata = 0x7f537fcdf9c0 <qt_meta_stringdata_QObject>, data = 0x7f537fcdfae0 <qt_meta_data_QObject>, static_metacall = 0x7f537fb73f08 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0xe0e35787}, static staticQtMetaObject = {d = {superdata = 0x0, stringdata = 0x7f537fd2e1e0 <qt_meta_stringdata_Qt>, data = 0x7f537fd39020 <qt_meta_data_Qt>, static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = { superdata = 0x7f5380044c40 <QObject::staticMetaObject>, stringdata = 0x7f538008eb40 <qt_meta_stringdata_QTestEventLoop>, data = 0x7f538008ebc0 <qt_meta_data_QTestEventLoop>, static_metacall = 0x7f5380088236 <QTestEventLoop::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, inLoop = 128, _timeout = 88, timerId = 32767, loop = 0x0}, m_waiting = false} #31 0x000000000040b43c in tst_QSocketNotifier::qt_static_metacall ( _o=0x7fffe0e367c0, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fffe0e35990) at .moc/tst_qsocketnotifier.moc:90 _t = 0x7fffe0e367c0 #32 0x00007f537fb3d5ef in QMetaMethod::invoke (this=0x76e9b0, object=0x7fffe0e367c0, connectionType=Qt::DirectConnection, returnValue=..., val0=..., val1=..., val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., val9=...) at kernel/qmetaobject.cpp:2222 paramCount = 1 currentThread = 0x766e40 param = {0x0 <repeats 11 times>} idx_relative = 3 callFunction = 0x40b37c <tst_QSocketNotifier::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)> __PRETTY_FUNCTION__ = "bool QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgum"... typeNames = {0x0 <repeats 11 times>} objectThread = 0x766e40 idx_offset = 5 #33 0x00007f538006c148 in QMetaMethod::invoke (this=0x76e9b0, object=0x7fffe0e367c0, connectionType=Qt::DirectConnection, val0=..., val1=..., val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., val9=...) at ../../include/QtCore/../../src/corelib/kernel/qmetaobject.h:123 No locals. #34 0x00007f5380065964 in QTest::TestMethods::invokeTestOnData ( this=0x7fffe0e36630, index=0) at qtestcase.cpp:832 invokeOk = false isBenchmark = false i = -1 results = {d = 0x7f537fc18d80 <QArrayData::shared_null>} minimumTotalReached = false #35 0x00007f5380066497 in QTest::TestMethods::invokeTest (this=0x7fffe0e36630, index=0, data=0x0, watchDog=0x7709b0) at qtestcase.cpp:1013 s = {<No data fields>} curDataIndex = 0 dataCount = 0 foundFunction = true benchmarkData = {static current = 0x7fffe0e35fe0, result = {context = { slotName = {static null = {<No data fields>}, d = 0x7f537fc18d80 <QArrayData::shared_null>}, tag = { static null = {<No data fields>}, d = 0x7f537fc18d80 <QArrayData::shared_null>}, checkpointIndex = -1}, value = -1, iterations = -1, metric = QTest::FramesPerSecond, setByMacro = true, valid = false}, resultAccepted = false, runOnce = false, iterationCount = 1} member = "asyncMultipleDatagram_data()\000\177\000\000Xw\206\177S\177\000\000H&\005\200S\177\000\000\000\000\000\000\005\000\000\000\275\023\000\000\001\000\000\000\005\000\000\000\377\177\000\000x\023\207\200S\177\000\000\300a\343\340\377\177\000\000X㉀S\177\000\000\350a\343\340\377\177\000\000\000\340\211\200S\177\000\000\001\000\000\000\000\000\000\000\355\226h\200S\177\000\000\000\000\000\000\000\000\000\000x\023\207\200S\177\000\000\005\000\000\000\377\177\000\000\000\000\000\000\000\000\000\000\001\000\000\000\000\000\000\000\000\340\211\200S\177\000\000\377\377\377\377\000\000\000\000X艀S\177\000\000\350\353`\177S\177\000\000\350鉀S\177"... name = @0x7fffe0e36240: { d = 0x4199b8 <qt_meta_stringdata_tst_QSocketNotifier+120>} table = {d = 0x76de00} gTable = 0x76e9d0 globalDataCount = 0 curGlobalDataIndex = 0 #36 0x00007f53800675d1 in QTest::TestMethods::invokeTests ( this=0x7fffe0e36630, testObject=0x7fffe0e367c0) at qtestcase.cpp:1315 data = 0x0 ok = false i = 0 count = 1 previousFailed = false metaObject = 0x6226c0 <tst_QSocketNotifier::staticMetaObject> watchDog = {d = 0x7709b0} #37 0x00007f5380068168 in QTest::qExec (testObject=0x7fffe0e367c0, argc=2, argv=0x7fffe0e368e8) at qtestcase.cpp:1727 handler = {d = 0x76ded0} commandLineMethods = {<std::_Vector_base<QMetaMethod, std::allocator<QMetaMethod> >> = { _M_impl = {<std::allocator<QMetaMethod>> = {<__gnu_cxx::new_allocator<QMetaMethod>> = {<No data fields>}, <No data fields>}, _M_start = 0x76e990, _M_finish = 0x76e9a0, _M_end_of_storage = 0x76e9a0}}, <No data fields>} test = {m_initTestCaseMethod = {mobj = 0x0, handle = 0}, m_initTestCaseDataMethod = {mobj = 0x0, handle = 0}, m_cleanupTestCaseMethod = {mobj = 0x0, handle = 0}, m_initMethod = { mobj = 0x0, handle = 0}, m_cleanupMethod = {mobj = 0x0, handle = 0}, m_methods = {<std::_Vector_base<QMetaMethod, std::allocator<QMetaMethod> >> = { _M_impl = {<std::allocator<QMetaMethod>> = {<__gnu_cxx::new_allocator<QMetaMethod>> = {<No data fields>}, <No data fields>}, _M_start = 0x76e9b0, _M_finish = 0x76e9c0, _M_end_of_storage = 0x76e9c0}}, <No data fields>}} metaObject = 0x6226c0 <tst_QSocketNotifier::staticMetaObject> benchmarkData = {static current = 0x7fffe0e365f0, measurer = 0x76deb0, context = {slotName = {static null = {<No data fields>}, d = 0x770e90}, tag = {static null = {<No data fields>}, d = 0x7f537fc18e60 <qt_array>}, checkpointIndex = -1}, walltimeMinimum = -1, iterationCount = -1, medianIterationCount = -1, createChart = false, verboseOutput = false, callgrindOutFileBase = { static null = {<No data fields>}, d = 0x7f537fc18d80 <QArrayData::shared_null>}, minimumTotal = -1, mode_ = QBenchmarkGlobalData::WallTime} callgrindChildExitCode = 0 __PRETTY_FUNCTION__ = "int QTest::qExec(QObject*, int, char**)" #38 0x000000000040b32b in main (argc=2, argv=0x7fffe0e368e8) at tst_qsocketnotifier.cpp:379 app = {<QObject> = { _vptr.QObject = 0x7f5380048650 <vtable for QCoreApplication+16>, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7f537fcdf9c0 <qt_meta_stringdata_QObject>, data = 0x7f537fcdfae0 <qt_meta_data_QObject>, static_metacall = 0x7f537fb73f08 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x766d00}, static staticQtMetaObject = {d = {superdata = 0x0, stringdata = 0x7f537fd2e1e0 <qt_meta_stringdata_Qt>, data = 0x7f537fd39020 <qt_meta_data_Qt>, static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = { superdata = 0x7f5380044c40 <QObject::staticMetaObject>, stringdata = 0x7f537fd48e40 <qt_meta_stringdata_QCoreApplication>, data = 0x7f537fd49060 <qt_meta_data_QCoreApplication>, static_metacall = 0x7f537fc0e35c <QCoreApplication::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, static self = 0x7fffe0e367e0} tc = {<QObject> = { _vptr.QObject = 0x622890 <vtable for tst_QSocketNotifier+16>, static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7f537fcdf9c0 <qt_meta_stringdata_QObject>, data = 0x7f537fcdfae0 <qt_meta_data_QObject>, static_metacall = 0x7f537fb73f08 <QObject::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, d_ptr = {d = 0x76d140}, static staticQtMetaObject = {d = {superdata = 0x0, stringdata = 0x7f537fd2e1e0 <qt_meta_stringdata_Qt>, data = 0x7f537fd39020 <qt_meta_data_Qt>, static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}}, static staticMetaObject = {d = { superdata = 0x7f5380044c40 <QObject::staticMetaObject>, stringdata = 0x419940 <qt_meta_stringdata_tst_QSocketNotifier>, data = 0x419aa0 <qt_meta_data_tst_QSocketNotifier>, static_metacall = 0x40b37c <tst_QSocketNotifier::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, m_asyncSender = 0x770ee0, m_asyncReceiver = 0x7711c0} Detaching from program: /home/qt/work/qt/qtbase/tests/auto/corelib/kernel/qsocketnotifier/tst_qsocketnotifier, process 12389 ========= End of stack trace ============== QFATAL : tst_QSocketNotifier::asyncMultipleDatagram() Received signal 11 Function time: 2ms Total time: 2ms FAIL! : tst_QSocketNotifier::asyncMultipleDatagram() Received a fatal error. Loc: [Unknown file(0)] Totals: 1 passed, 1 failed, 0 skipped, 0 blacklisted, 2621ms ********* Finished testing of tst_QSocketNotifier ********* Makefile:282: recipe for target 'check' failed agent:2016/05/26 14:36:02 build.go:206: Process finished with error: exit status 2 agent:2016/05/26 14:36:02 agent.go:170: Test failed agent:2016/05/26 14:36:02 agent.go:127: ERROR building: exit status 2 agent:2016/05/26 14:36:02 build.go:155: make: *** [check] Aborted (core dumped) agent:2016/05/26 14:36:02 build.go:158: Error reading from stdout/err: exit status 2
- replaces
-
QTBUG-53662 tst_QIODevice::constructing_QTcpSocket() crashes on OpenSUSE 42.1
-
- Closed
-
-
QTBUG-53665 tst_QTextStream::stillOpenWhenAtEnd() crashes on OpenSUSE 42.1
-
- Closed
-
For Gerrit Dashboard: QTBUG-53649 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
160593,4 | Turn off libproxy support by default | dev | qt/qtbase | Status: MERGED | +2 | 0 |